# python_lib_template

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
docs/: requirements.txt
lib_name/: __init__.py
tests/: test_adder.py
{{cookiecutter.project_slug}}/: .coveragerc  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/scripts/: docker
{{cookiecutter.project_slug}}/tests/: test_adder.py
