[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}}"]
license = "{{cookiecutter.license}}"
readme = "docs/index.md"

homepage = "https://pypi.org/project/{{cookiecutter.project_slug}}"
documentation = "https://{{cookiecutter.project_slug}}.readthedocs.io/"
repository = "{{cookiecutter.repository_url}}"

keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^{{cookiecutter.default_python_version}}"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
pdbpp = "^0.10.2"
setuptools = "^45.1.0"
twine = "^3.1.1"
mkdocs = ">=1.1,<2"
mkdocs-material = ">=4.6.3,<5"
pygments = "==2.5.2"
mkdocstrings = ">0.8,<1"
black = "^19.10b0"
mypy = "^0.761"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
combine_as_imports = true
